# piper

./: .gitignore  Dockerfile  README.md  example.py  pyproject.toml  requirements.txt  run.sh  run_1f1b.sh  run_dp.sh  run_interleaved-3b.sh  run_interleaved-debug.sh  run_interleaved.sh  run_interleaved_1f1b.sh  run_test.sh  run_zero0.sh  run_zero1.sh  run_zero1_baseline.sh  run_zero2.sh  split_example.py  split_example_FX.py  split_example_autograd.py  test_concurrent_actors.py  visualize_graph.py
buggy-logs/: interleaved_debug.trace
buggy-out/: debug-pp2-dp1-interleaved-1f1b.json
docs/: zero1_design.md
experimental/: nccl_priority_cudart.py  nccl_priority_mp.py  nccl_stream_priority_exp.py  priority_sanity_single_gpu.py  priority_single_baseline.py  run_cudart.sh  run_mp.sh  run_single_baseline.sh  run_single_gpu.sh  run_torchrun.sh
logs/: 1f1b_3b_gpu012-nsys-min_v3-dashboard.trace  1f1b_3b_gpu012-nsys.trace  interleaved_1f1b_3b_gpu012-nsys-0.trace  interleaved_1f1b_3b_gpu012-nsys-min_v3-dashboard.trace  interleaved_1f1b_3b_gpu012-nsys.trace  interleaved_1f1b_3b_gpu012.trace  interleaved_1f1b_8b_gpu012.trace  interleaved_3b.trace  interleaved_debug.trace  plot_sched.py
logs-force-sync/: LLAMA_3B-pp2-dp1-1f1b.cleaned.json  LLAMA_3B-pp2-dp1-1f1b.json  LLAMA_3B-pp2-dp1-interleaved-1f1b_gpu12.cleaned.json  LLAMA_3B-pp2-dp1-interleaved-1f1b_gpu12.json  LLAMA_3B-pp2-dp1-interleaved-1f1b_gpu312.cleaned.json  LLAMA_3B-pp2-dp1-interleaved-1f1b_gpu312.json
nsight/: worker_process_2495217.nsys-rep
nsight-no-trace/: worker_process_3180835.nsys-rep
piper/: actor.py  (+9 more)
(+63 files in other folders)
